# bsk-ros2-mpc

./: LICENSE  README.md
bsk_controller/: package.xml  setup.cfg  setup.py
bsk_controller/bsk_controller/: bsk_mpc.py  bsk_mpc_px4.py  rviz_pos_marker.py
bsk_controller/bsk_controller/bsk_planner/: __init__.py  figure8_waypoint_publisher.py  follower_waypoint_publisher.py  waypoint_publisher.py
bsk_controller/bsk_controller/config/: config.rviz  config_nomarker.rviz
bsk_controller/bsk_controller/controllers/: avoidance_mpc.py  mpc_da.py  mpc_follower_wrench.py  mpc_wrench.py
bsk_controller/bsk_controller/launch/: bsk_mpc.launch.py  bsk_mpc_followers.launch.py  bsk_mpc_leader.launch.py  bsk_mpc_px4.launch.py  figure8_waypoint.launch.py  follower_waypoint.launch.py  px4_mpc_followers.launch.py  px4_mpc_leader.launch.py  waypoint_publisher.launch.py
bsk_controller/bsk_controller/models/: bsk_model_da.py  bsk_model_wrench.py
bsk_controller/bsk_controller/tools/: path_tools.py  utils.py
bsk_controller/bsk_planner/: simpleWaypoint.py
bsk_mpc_msgs/: CMakeLists.txt  package.xml
bsk_ros2_mpc/: package.xml  setup.cfg  setup.py
bsk_ros2_mpc/bsk_ros2_mpc/: bsk_mpc.py  bsk_mpc_px4.py  rviz_pose_marker.py  visualizer.py
bsk_ros2_mpc/bsk_ros2_mpc/bsk_planner/: follower_publisher.py
bsk_ros2_mpc/bsk_ros2_mpc/config/: config.rviz
bsk_ros2_mpc/bsk_ros2_mpc/controllers/: avoidance_mpc.py  mpc_da.py  mpc_follower_wrench.py  mpc_wrench.py
bsk_ros2_mpc/bsk_ros2_mpc/launch/: mpc.launch.py  mpc_followers.launch.py  mpc_followers_px4.launch.py  mpc_leader.launch.py  mpc_leader.launch_px4.py  mpc_leader_px4.launch.py
bsk_ros2_mpc/bsk_ros2_mpc/models/: bsk_model_da.py  bsk_model_wrench.py
bsk_ros2_mpc/bsk_ros2_mpc/nodes/: bsk_mpc_node.py  bsk_mpc_px4_node.py  rviz_pose_marker_node.py  visualizer_node.py
bsk_ros2_mpc/bsk_ros2_mpc/planners/: follower_publisher.py  simpleWaypoint.py  waypoint_publisher.py
bsk_ros2_mpc/bsk_ros2_mpc/tools/: utils.py
bsk_ros2_mpc/config/: config.rviz  config_mod.rviz
bsk_ros2_mpc/launch/: mpc.launch.py  mpc_followers_px4.launch.py  mpc_leader.launch.py  mpc_leader_px4.launch.py
mpc_msgs/: CMakeLists.txt  package.xml
rviz_msgs/: CMakeLists.txt  package.xml
tools/: commands.txt  record_bsk_topics.sh  record_px4_topics.sh  record_topics.sh
