<?xml version="1.0"?>
<package format="3">
  <name>bsk-ros2-mpc</name>
  <version>0.1.0</version>
  <description>Controller node for Basilisk spacecraft</description>
  <maintainer email="eliaskra@kth.se">Elias Krantz</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>bsk_msgs</exec_depend>
  <exec_depend>bsk_mpc_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
