<?xml version="1.0"?>
<package format="3">
  <name>rviz_msgs</name>
  <version>0.1.0</version>
  <description>Custom service definitions for RViz integration</description>
  <maintainer email="eliaskra@kth.se">Elias Krantz</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
